work on a header section

--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Go Surf</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
   
+  <header class="header">
+    <div class="header__slider">
+      <div class="header__slider-item slider-item">
+        <div class="slider-item__info">
+          <h2 class="slider-item__info-suptitle">Surf</h2>
+          <h1 class="slider-item__info-title">West Shore</h1>
+          <p class="slider-item__info-suptext">Condition</p>
+          <p class="slider-item__info-text">Radical</p>
+          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+        </div>
+      </div>
+
+    </div>
+  </header>
+
+
+
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
