--- a/app/index.html
+++ b/app/index.html
@@ -11,15 +11,42 @@
   
   <header class="header">
     <div class="header__slider">
+
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
-          <h2 class="slider-item__info-suptitle">Surf</h2>
-          <h1 class="slider-item__info-title">West Shore</h1>
-          <p class="slider-item__info-suptext">Condition</p>
+          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
+          <h2 class="slider-item__info-title">North Shore</h2>
+          <p class="slider-item__info-suptext suptitle-left">Condition</p>
           <p class="slider-item__info-text">Radical</p>
           <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
         </div>
+
+        <div class="slider-item__info">
+          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
+          <h2 class="slider-item__info-title">South Shore</h2>
+          <p class="slider-item__info-suptext suptitle-left">Condition</p>
+          <p class="slider-item__info-text">Radical</p>
+          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+        </div>
+
+        <div class="slider-item__info">
+          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
+          <h2 class="slider-item__info-title">West Shore</h2>
+          <p class="slider-item__info-suptext suptitle-left">Condition</p>
+          <p class="slider-item__info-text">Radical</p>
+          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+        </div>
+
+        <div class="slider-item__info">
+          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
+          <h2 class="slider-item__info-title">West Shore</h2>
+          <p class="slider-item__info-suptext suptitle-left">Condition</p>
+          <p class="slider-item__info-text">East Shore</p>
+          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+        </div>
+
       </div>
+      
 
     </div>
   </header>
