work for a slider on the header

--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Go Surf</title>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body class="body">
   
   <header class="header">
     <div class="header__slider">
@@ -18,32 +19,39 @@
           <h2 class="slider-item__info-title">North Shore</h2>
           <p class="slider-item__info-suptext suptitle-left">Condition</p>
           <p class="slider-item__info-text">Radical</p>
-          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
+      </div>
 
+      <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
           <h2 class="slider-item__info-title">South Shore</h2>
           <p class="slider-item__info-suptext suptitle-left">Condition</p>
           <p class="slider-item__info-text">Radical</p>
-          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
+      </div>
 
+      <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
           <h2 class="slider-item__info-title">West Shore</h2>
           <p class="slider-item__info-suptext suptitle-left">Condition</p>
           <p class="slider-item__info-text">Radical</p>
-          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
+      </div>
 
+      <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
           <h2 class="slider-item__info-title">West Shore</h2>
           <p class="slider-item__info-suptext suptitle-left">Condition</p>
           <p class="slider-item__info-text">East Shore</p>
-          <a href="#" class="slider-item__info-link"><img src="img/arrows-right.svg" alt=""></a>
+          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
+      </div>
 
       </div>
       
