--- a/app/index.html
+++ b/app/index.html
@@ -13,43 +13,43 @@
   <header class="header">
     <div class="header__slider">
 
-      <div class="header__slider-item slider-item">
-        <div class="slider-item__info">
-          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
-          <h2 class="slider-item__info-title">North Shore</h2>
-          <p class="slider-item__info-suptext suptitle-left">Condition</p>
-          <p class="slider-item__info-text">Radical</p>
-          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
+      <div class="header__slider-item">
+        <div class="header__content">
+          <h3 class="suptitle suptitle--left">Surf</h3>
+          <h2 class="title">North Shore</h2>
+          <p class="suptitle suptitle--left">Condition</p>
+          <p class="title title--small">Radical</p>
+          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
       </div>
 
-      <div class="header__slider-item slider-item">
-        <div class="slider-item__info">
-          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
-          <h2 class="slider-item__info-title">South Shore</h2>
-          <p class="slider-item__info-suptext suptitle-left">Condition</p>
-          <p class="slider-item__info-text">Radical</p>
-          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
+      <div class="header__slider-item">
+        <div class="header__content">
+          <h3 class="suptitle suptitle--left">Surf</h3>
+          <h2 class="title">South Shore</h2>
+          <p class="suptitle suptitle--left">Condition</p>
+          <p class="title title--small">Radical</p>
+          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
       </div>
 
-      <div class="header__slider-item slider-item">
-        <div class="slider-item__info">
-          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
-          <h2 class="slider-item__info-title">West Shore</h2>
-          <p class="slider-item__info-suptext suptitle-left">Condition</p>
-          <p class="slider-item__info-text">Radical</p>
-          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
+      <div class="header__slider-item">
+        <div class="header__content">
+          <h3 class="suptitle suptitle--left">Surf</h3>
+          <h2 class="title">West Shore</h2>
+          <p class="suptitle suptitle--left">Condition</p>
+          <p class="title title--small">Radical</p>
+          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
       </div>
 
-      <div class="header__slider-item slider-item">
-        <div class="slider-item__info">
-          <h3 class="slider-item__info-suptitle suptitle-left">Surf</h3>
-          <h2 class="slider-item__info-title">West Shore</h2>
-          <p class="slider-item__info-suptext suptitle-left">Condition</p>
-          <p class="slider-item__info-text">East Shore</p>
-          <a href="#" class="slider-item__info-link"><img src="img/header/arrows-right.svg" alt=""></a>
+      <div class="header__slider-item">
+        <div class="header__content">
+          <h3 class="suptitle suptitle--left">Surf</h3>
+          <h2 class="title">West Shore</h2>
+          <p class="suptitle suptitle--left">Condition</p>
+          <p class="title title--small">East Shore</p>
+          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
       </div>
 
