--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
           <h3 class="suptitle suptitle--left">Surf</h3>
           <h2 class="title">West Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
-          <p class="title title--small">East Shore</p>
+          <p class="title title--small">Radical</p>
           <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
         </div>
       </div>
