added arrow buttons

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
           <h2 class="title">North Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
+          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
         </div>
       </div>
 
@@ -29,7 +29,7 @@
           <h2 class="title">South Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
+          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
         </div>
       </div>
 
@@ -39,7 +39,7 @@
           <h2 class="title">West Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
+          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
         </div>
       </div>
 
@@ -49,7 +49,7 @@
           <h2 class="title">West Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrows-right.svg" alt=""></a>
+          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
         </div>
       </div>
 
