--- a/app/index.html
+++ b/app/index.html
@@ -52,10 +52,33 @@
           <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
         </div>
       </div>
+    </div>
 
+    <div class="slider-dots">
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">01</div>
+          <div class="dots-box__name">North Shore</div>
+        </div>
       </div>
-      
-
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">02</div>
+          <div class="dots-box__name">South Shore</div>
+        </div>
+      </div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">03</div>
+          <div class="dots-box__name">West Shore</div>
+        </div>
+      </div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">04</div>
+          <div class="dots-box__name">East Shore</div>
+        </div>
+      </div>
     </div>
   </header>
 
