addedd title shadow on the header

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,11 @@
 <body class="body">
   
   <header class="header">
+    <h2 class="header__title-shadow title-shadow">go surf</h2>
+    <aside class="aside">
+      
+    </aside>
 
-    
     <div class="header__slider">
       <div class="header__slider-item">
         <div class="header__content">
