added aside section

--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,20 @@
 </head>
 <body class="body">
   
-  <header class="header">
+  <header class="header" id="header">
     <h2 class="header__title-shadow title-shadow">go surf</h2>
     <aside class="aside">
-      
+
+      <a href="#" class="aside__logo"><img src="img/header/logo.svg" alt="logo"></a>
+      <nav>
+        <ul class="menu">
+          <li><a class="menu__link" href="#surf"><img src="img/header/icon-surf.svg" alt="Surf">Surf</a></li>
+          <li><a class="menu__link" href="#travel"><img src="img/header/icon-travel.svg" alt="Travel">Travel</a></li>
+          <li><a class="menu__link" href="#sleep"><img src="img/header/icon-sleep.svg" alt="Sleep">Sleep</a></li>
+          <li><a class="menu__link" href="#shoop"><img src="img/header/icon-shop.svg" alt="Shop">Shop</a></li>
+        </ul>
+      </nav>
+
     </aside>
 
     <div class="header__slider">
@@ -23,7 +33,7 @@
           <h2 class="title">North Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
+          <a href="#header" class=""><img src="img/header/arrow-right.svg" alt=""></a>
         </div>
       </div>
 
