--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,12 @@
           <li><a class="menu__link" href="#shoop"><img src="img/header/icon-shop.svg" alt="Shop">Shop</a></li>
         </ul>
       </nav>
+      <a class="aside__search"><img src="img/header/icon-search.svg" alt="search"></a>
+      <div class="date">
+        <span class="date__day">20</span>
+        <span class="date__month-year">06 | 2018</span>
+      </div>
+      <p class="aside__location"><img src="img/header/icon-location.svg" alt="location">California</p>
 
     </aside>
 
