work on the aside

--- a/app/index.html
+++ b/app/index.html
@@ -15,21 +15,22 @@
     <aside class="aside">
 
       <a href="#" class="aside__logo"><img src="img/header/logo.svg" alt="logo"></a>
-      <nav>
-        <ul class="menu">
-          <li><a class="menu__link" href="#surf"><img src="img/header/icon-surf.svg" alt="Surf">Surf</a></li>
-          <li><a class="menu__link" href="#travel"><img src="img/header/icon-travel.svg" alt="Travel">Travel</a></li>
-          <li><a class="menu__link" href="#sleep"><img src="img/header/icon-sleep.svg" alt="Sleep">Sleep</a></li>
-          <li><a class="menu__link" href="#shoop"><img src="img/header/icon-shop.svg" alt="Shop">Shop</a></li>
-        </ul>
-      </nav>
-      <a class="aside__search"><img src="img/header/icon-search.svg" alt="search"></a>
-      <div class="date">
-        <span class="date__day">20</span>
-        <span class="date__month-year">06 | 2018</span>
+      <div class="aside__content">
+        <nav>
+          <ul class="menu">
+            <li><a class="menu__link" href="#surf"><img src="img/header/icon-surf.svg" alt="Surf">Surf</a></li>
+            <li><a class="menu__link" href="#travel"><img src="img/header/icon-travel.svg" alt="Travel">Travel</a></li>
+            <li><a class="menu__link" href="#sleep"><img src="img/header/icon-sleep.svg" alt="Sleep">Sleep</a></li>
+            <li><a class="menu__link" href="#shoop"><img src="img/header/icon-shop.svg" alt="Shop">Shop</a></li>
+          </ul>
+        </nav>
+        <a class="aside__search"><img src="img/header/icon-search.svg" alt="search"></a>
+        <div class="date">
+          <span class="date__day">20</span>
+          <span class="date__month-year">06 | 2018</span>
+        </div>
+        <p class="aside__location"><img src="img/header/icon-location.svg" alt="location">California</p>
       </div>
-      <p class="aside__location"><img src="img/header/icon-location.svg" alt="location">California</p>
-
     </aside>
 
     <div class="header__slider">
