--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
       <div class="header__slider-item">
         <div class="header__content">
           <h3 class="suptitle suptitle--left">Surf</h3>
-          <h2 class="title">West Shore</h2>
+          <h2 class="title">East Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
           <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
