--- a/app/index.html
+++ b/app/index.html
@@ -43,13 +43,15 @@
         <a class="aside__search"><img src="img/header/icon-search.svg" alt="search"></a>
         <div class="date">
           <span class="date__day">20</span>
-          <span class="date__month-year">06 | 2018</span>
+          <span class="date__month">06</span>
+          <span>|</span>
+          <span class="date__year">2018</span>
         </div>
         <p class="aside__location"><img src="img/header/icon-location.svg" alt="location">California</p>
       </div>
     </aside>
 
-    <a href="#surf" class="header__go-down animated fadeInDown infinite slower"><img src="img/header/icon-go-down.svg" alt="Go Down"></a>
+    <a href="#surf" class="header__go-down"><img class="animated fadeInDown infinite slower" src="img/header/icon-go-down.svg" alt="Go Down"></a>
 
     <div class="header__slider">
       <div class="header__slider-item">
@@ -58,7 +60,7 @@
           <h2 class="title">North Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <a href="#header" class=""><img src="img/header/arrow-right.svg" alt=""></a>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
         </div>
       </div>
 
@@ -67,8 +69,8 @@
           <h3 class="suptitle suptitle--left">Surf</h3>
           <h2 class="title">South Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
-          <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
+          <p class="title title--small">Normal</p>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
         </div>
       </div>
 
@@ -77,8 +79,8 @@
           <h3 class="suptitle suptitle--left">Surf</h3>
           <h2 class="title">West Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
-          <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
+          <p class="title title--small">Moderate</p>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
         </div>
       </div>
 
@@ -88,7 +90,7 @@
           <h2 class="title">East Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <a href="#" class=""><img src="img/header/arrow-right.svg" alt=""></a>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
         </div>
       </div>
     </div>
