--- a/app/index.html
+++ b/app/index.html
@@ -22,15 +22,15 @@
         <!-- WEST SHORE LINE -->
         <path class="map__line-animation" d="M729.114 76.9394C720.546 100.321 740.614 108.526 756.675 123.807C761.434 128.336 761.888 135.817 756.879 140.342C746.107 150.074 705.264 135.917 707.854 148.745C710.53 161.994 745.061 180.531 746.618 181.799C760.284 192.932 764.735 221.174 757.208 236.658C751.852 247.676 716.342 243.962 705.172 240.293C632.024 216.266 664.985 219.131 582.817 211.67C576.527 211.099 569.935 210.806 563.894 212.65C557.671 214.549 557.869 222.339 559.957 226.55C566.876 240.506 597.849 264.178 589.514 282.523C586.956 288.152 580.963 291.707 578.264 297.27C576.151 301.627 576.385 306.772 575.445 311.523" stroke="white" stroke-width="2"/>
         <!-- WEST SHORE POINT -->
-        <path class="animated fadeIn delay-5s" fill-rule="evenodd" clip-rule="evenodd" d="M573.5 319C577.09 319 580 316.09 580 312.5C580 308.91 577.09 306 573.5 306C569.91 306 567 308.91 567 312.5C567 316.09 569.91 319 573.5 319Z" fill="#4AF6CD"/>
+        <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M573.5 319C577.09 319 580 316.09 580 312.5C580 308.91 577.09 306 573.5 306C569.91 306 567 308.91 567 312.5C567 316.09 569.91 319 573.5 319Z" fill="#4AF6CD"/>
         <!-- EAST SHORE POINT -->
-        <path class="animated fadeIn delay-2s" fill-rule="evenodd" clip-rule="evenodd" d="M661 356C662.657 356 664 354.657 664 353C664 351.343 662.657 350 661 350C659.343 350 658 351.343 658 353C658 354.657 659.343 356 661 356Z" fill="#4AF6CD"/>
+        <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M661 356C662.657 356 664 354.657 664 353C664 351.343 662.657 350 661 350C659.343 350 658 351.343 658 353C658 354.657 659.343 356 661 356Z" fill="#4AF6CD"/>
         <!-- SOUTH SHORE POINT -->
-        <path class="animated fadeIn delay-3s" fill-rule="evenodd" clip-rule="evenodd" d="M725 464C726.657 464 728 462.657 728 461C728 459.343 726.657 458 725 458C723.343 458 722 459.343 722 461C722 462.657 723.343 464 725 464Z" fill="#4AF6CD"/>
+        <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M725 464C726.657 464 728 462.657 728 461C728 459.343 726.657 458 725 458C723.343 458 722 459.343 722 461C722 462.657 723.343 464 725 464Z" fill="#4AF6CD"/>
         <!-- NORTH SHORE POINT -->
-        <path class="animated fadeIn delay-1s" fill-rule="evenodd" clip-rule="evenodd" d="M365 221C366.657 221 368 219.657 368 218C368 216.343 366.657 215 365 215C363.343 215 362 216.343 362 218C362 219.657 363.343 221 365 221Z" fill="#4AF6CD"/>
+        <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M365 221C366.657 221 368 219.657 368 218C368 216.343 366.657 215 365 215C363.343 215 362 216.343 362 218C362 219.657 363.343 221 365 221Z" fill="#4AF6CD"/>
         <!-- CURRENT LOCATION POINT -->
-        <path class="animated fadeIn delay-4s" fill-rule="evenodd" clip-rule="evenodd" d="M729.5 84C733.09 84 736 81.0899 736 77.5C736 73.9101 733.09 71 729.5 71C725.91 71 723 73.9101 723 77.5C723 81.0899 725.91 84 729.5 84Z" fill="#4AF6CD"/>
+        <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M729.5 84C733.09 84 736 81.0899 736 77.5C736 73.9101 733.09 71 729.5 71C725.91 71 723 73.9101 723 77.5C723 81.0899 725.91 84 729.5 84Z" fill="#4AF6CD"/>
       </svg>
     </div>
 
