--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,8 @@
         <!-- NORTH SHORE POINT -->
         <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M365 221C366.657 221 368 219.657 368 218C368 216.343 366.657 215 365 215C363.343 215 362 216.343 362 218C362 219.657 363.343 221 365 221Z" fill="#4AF6CD"/>
         <!-- CURRENT LOCATION POINT -->
-        <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M729.5 84C733.09 84 736 81.0899 736 77.5C736 73.9101 733.09 71 729.5 71C725.91 71 723 73.9101 723 77.5C723 81.0899 725.91 84 729.5 84Z" fill="#4AF6CD"/>
+        <path class="location-point" fill-rule="evenodd" clip-rule="evenodd" d="M729.5 84C733.09 84 736 81.0899 736 77.5C736 73.9101 733.09 71 729.5 71C725.91 71 723 73.9101 723 77.5C723 81.0899 725.91 84 729.5 84Z" fill="#4AF6CD"/>
+        <text class="location-point__text" x="650" y="70">California</text>
       </svg>
     </div>
 
