--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,9 @@
       </div>
     </aside>
 
-    <a href="#surf" class="header__go-down"><img class="animated fadeInDown infinite slower" src="img/header/icon-go-down.svg" alt="Go Down"></a>
+    <a href="#surf" class="header__go-down">
+      <svg class="header__go-down-icon" height="40" width="40" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"><path d="m32 56c13.233 0 24-10.766 24-24s-10.767-24-24-24-24 10.766-24 24 10.767 24 24 24zm0-44c11.028 0 20 8.972 20 20s-8.972 20-20 20-20-8.972-20-20 8.972-20 20-20z"/><path d="m29.172 30.828c.782.782 1.809 1.172 2.835 1.172 1.019 0 2.034-.386 2.803-1.154l6.586-6.414c.791-.771.808-2.037.037-2.828-.77-.791-2.037-.808-2.828-.037l-6.623 6.414-6.586-6.414c-.791-.771-2.059-.754-2.828.037-.771.792-.754 2.058.037 2.828z"/><path d="m29.172 41.828c.782.782 1.809 1.172 2.835 1.172 1.019 0 2.034-.386 2.803-1.154l6.586-6.414c.791-.771.808-2.037.037-2.828-.77-.791-2.037-.808-2.828-.037l-6.623 6.414-6.586-6.414c-.791-.771-2.059-.754-2.828.037-.771.792-.754 2.058.037 2.828z"/></svg>
+    </a>
 
     <div class="header__slider">
       <div class="header__slider-item" id="soska">
