added a new section

--- a/app/index.html
+++ b/app/index.html
@@ -246,7 +246,10 @@
     </div>
   </header>
 
-
+  <section class="surf">
+    <h2 class="title title--line">surf<span class="title-shadow">surf</span></h2>
+    
+  </section>
 
 
   
