added new global styles

--- a/app/index.html
+++ b/app/index.html
@@ -247,7 +247,10 @@
   </header>
 
   <section class="surf">
-    <h2 class="title title--line">surf<span class="title-shadow">surf</span></h2>
+    <div class="container">
+      <h2 class="title title--line">surf<span class="title-shadow">surf</span></h2>
+    </div>
+
     
   </section>
 
