--- a/app/index.html
+++ b/app/index.html
@@ -249,6 +249,11 @@
   <section class="surf">
     <div class="container">
       <h2 class="title title--line">surf<span class="title-shadow">surf</span></h2>
+
+      <div class="surf__content">
+        <p class="suptitle suptitle--left">current location</p>
+        <h3 class="title title--small">california | usa</h3>
+      </div>
     </div>
 
     
