work on the surf section

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Go Surf</title>
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="body">
@@ -248,11 +248,11 @@
 
   <section class="surf">
     <div class="container">
-      <h2 class="title title--line">surf<span class="title-shadow">surf</span></h2>
+      <h2 class="title title--line surf__title">surf<span class="title-shadow surf__title-shadow">surf</span></h2>
 
       <div class="surf__content">
-        <p class="suptitle suptitle--left">current location</p>
-        <h3 class="title title--small">california | usa</h3>
+        <p class="suptitle suptitle--left surf__location">current location</p>
+        <h3 class="title title--small">california <span>|</span> usa</h3>
       </div>
     </div>
 
