work on surf slides has been started

--- a/app/index.html
+++ b/app/index.html
@@ -177,7 +177,7 @@
     </a>
 
     <div class="header__slider">
-      <div class="header__slider-item" id="soska">
+      <div class="header__slider-item">
         <div class="header__content">
           <h3 class="suptitle suptitle--left">Surf</h3>
           <h2 class="title">North Shore</h2>
@@ -254,7 +254,23 @@
         <p class="suptitle suptitle--left surf__location">current location</p>
         <h3 class="title title--small">california <span>|</span> usa</h3>
       </div>
+
+      <div class="surf-slider">
+        <ul class="surf-list">
+          <li class="surf-card"></li>
+          <li class="surf-card"></li>
+          <li class="surf-card"></li>
+          <li class="surf-card"></li>
+          <li class="surf-card"></li>
+          <li class="surf-card"></li>
+          <li class="surf-card"></li>
+        </ul>
+      </div>
+
+
     </div>
+
+    
 
     
   </section>
