work for surf slider

--- a/app/index.html
+++ b/app/index.html
@@ -255,15 +255,17 @@
         <h3 class="title title--small">california <span>|</span> usa</h3>
       </div>
 
+
       <div class="surf-slider">
         <ul class="surf-list">
-          <li class="surf-card"></li>
-          <li class="surf-card"></li>
-          <li class="surf-card"></li>
-          <li class="surf-card"></li>
-          <li class="surf-card"></li>
-          <li class="surf-card"></li>
-          <li class="surf-card"></li>
+          <li class="surf-card">1</li>
+          <li class="surf-card">2</li>
+          <li class="surf-card">3</li>
+          <li class="surf-card">4</li>
+          <li class="surf-card">5</li>
+          <li class="surf-card">6</li>
+          <li class="surf-card">7</li>
+          <li class="surf-card">8</li>
         </ul>
       </div>
 
