work for surf slider

--- a/app/index.html
+++ b/app/index.html
@@ -258,14 +258,54 @@
 
       <div class="surf-slider">
         <ul class="surf-list">
-          <li class="surf-card">1</li>
-          <li class="surf-card">2</li>
-          <li class="surf-card">3</li>
-          <li class="surf-card">4</li>
-          <li class="surf-card">5</li>
-          <li class="surf-card">6</li>
-          <li class="surf-card">7</li>
-          <li class="surf-card">8</li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-1.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California <span>|</span> USA</p>
+            </div>
+          </li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-2.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California <span>|</span> USA</p>
+            </div>
+          </li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-3.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California <span>|</span> USA</p>
+            </div>
+          </li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-4.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California <span>|</span> USA</p>
+            </div>
+          </li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-5.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California <span>|</span> USA</p>
+            </div>
+          </li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-6.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California <span>|</span> USA</p>
+            </div>
+          </li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-7.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California <span>|</span> USA</p>
+            </div>
+          </li>
+          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-8.jpg')">
+            <div class="surf-card__inner">
+              <h3 class="surf-card__title">Malibu Beach</h3>
+              <p class="surf-card__location">California | USA</p>
+            </div>
+          </li>
         </ul>
       </div>
 
