added surf-map__content box

--- a/app/index.html
+++ b/app/index.html
@@ -259,9 +259,17 @@
         <ul class="surf-map__list">
 
           <li class="surf-map__item surf-map__item--1">
-            <div class="surf-map__circle">
 
+            <div class="surf-map__content-box">
+              <p class="surf-map__beach">Airlie Beach</p>
+              <p class="surf-map__location">Australia</p>
+              <ul class="surf-map__conditions-list">
+                <li class="surf-map__waves">1111</li>
+                <li class="surf-map__tide">222</li>
+                <li class="surf-map__wind">333</li>
+              </ul>
             </div>
+            <div class="surf-map__circle"></div>
           </li>
           <li class="surf-map__item surf-map__item--2">
             <div class="surf-map__circle">
