--- a/app/index.html
+++ b/app/index.html
@@ -315,9 +315,29 @@
             </div>
           </li>
           <li class="surf-map__item surf-map__item--8">
-            <div class="surf-map__circle">
-          
+            <div class="surf-map__content-box">
+              <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+              <p class="surf-map__beach">Airlie Beach</p>
+              <p class="surf-map__location">Australia</p>
+              <ul class="surf-map__conditions-list">
+                <li>
+                  <img src="/img/surf/waves.png" alt="waves">
+                  <p class="surf-map__coditions-value">9 - 13</p>
+                  <p class="surf-map__coditions-text">Surf (FT)</p>
+                </li>
+                <li>
+                  <img src="/img/surf/tide.png" alt="tide">
+                  <p class="surf-map__coditions-value">+2.3</p>
+                  <p class="surf-map__coditions-text">TIDE (FT)</p>
+                </li>
+                <li>
+                  <img src="/img/surf/wind.png" alt="wind">
+                  <p class="surf-map__coditions-value">4 SE</p>
+                  <p class="surf-map__coditions-text">wind (kts)</p>
+                </li>
+              </ul>
             </div>
+            <div class="surf-map__circle"></div>
           </li>
 
         </ul>
