added new section

--- a/app/index.html
+++ b/app/index.html
@@ -459,7 +459,6 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-
         </ul>
       </div>
 
@@ -523,15 +522,24 @@
           </li>
         </ul>
       </div>
-
-
     </div>
-
-    
-
-    
   </section>
 
+  <section class="travel">
+    <h2 class="title title--line travel__title">travel<span class="title-shadow travel__title-shadow">travel</span></h2>
+
+    <div class="travel__slider">
+      <div class="travel__slider-item">
+        <div class="travel-head" style="background-image: jm">
+
+          <p class="suptitle suptitle--left travel-suptitle">Shore</p>
+          <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
+
+        </div>
+      </div>
+    </div>
+
+  </section>
 
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
