work for travel section

--- a/app/index.html
+++ b/app/index.html
@@ -526,15 +526,20 @@
   </section>
 
   <section class="travel">
-    <h2 class="title title--line travel__title">travel<span class="title-shadow travel__title-shadow">travel</span></h2>
+    <div class="container">
+      <h2 class="title title--line travel__title">travel<span class="title-shadow travel__title-shadow">travel</span></h2>
 
-    <div class="travel__slider">
-      <div class="travel__slider-item">
-        <div class="travel-head" style="background-image: jm">
-
-          <p class="suptitle suptitle--left travel-suptitle">Shore</p>
-          <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
-
+      <div class="travel__slider">
+        <div class="travel__slider-item">
+          <div class="travel-head">
+            <div class="travel-head__beach"></div>
+            <p class="suptitle suptitle--left travel-suptitle">Shore</p>
+            <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
+          </div>
+          <div class="travel-airline">
+            <p class="suptitle suptitle--right travel-suptitle">airline</p>
+            <h3 class="title title--small">Virgin Australia</h3>
+          </div>
         </div>
       </div>
     </div>
