--- a/app/index.html
+++ b/app/index.html
@@ -530,16 +530,21 @@
       <h2 class="title title--line travel__title">travel<span class="title-shadow travel__title-shadow">travel</span></h2>
 
       <div class="travel__slider">
+
         <div class="travel__slider-item">
+
           <div class="travel-head">
             <div class="travel-head__beach"></div>
             <p class="suptitle suptitle--left travel-suptitle">Shore</p>
             <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
           </div>
+
           <div class="travel-airline">
             <p class="suptitle suptitle--right travel-suptitle">airline</p>
-            <h3 class="title title--small">Virgin Australia</h3>
+            <h3 class="title title--small">Virgin Australia <img src="img/travel/airlie-beach/virgin-icon.svg" alt="virgin" class="travel-airline__icon"></h3>
           </div>
+
+
         </div>
       </div>
     </div>
