finished work on the travel section

--- a/app/index.html
+++ b/app/index.html
@@ -531,7 +531,7 @@
 
       <div class="travel__slider">
 
-        <div class="travel__slider-item">
+        <ul class="travel__slider-item">
 
           <div class="travel-head">
             <div class="travel-head__beach"></div>
@@ -544,7 +544,27 @@
             <h3 class="title title--small">Virgin Australia <img src="img/travel/airlie-beach/virgin-icon.svg" alt="virgin" class="travel-airline__icon"></h3>
           </div>
 
+          <ul class="travel-info">
+            <li class="travel-info__item">
+              <h3 class="travel-info__title">Destination</h3>
+              <p class="travel-info__text">Queensland Australia</p>
+            </li>
+            <li class="travel-info__item">
+              <h3 class="travel-info__title">Distance</h3>
+              <p class="travel-info__text">7,065 Miles</p>
+            </li>
+            <li class="travel-info__item">
+              <h3 class="travel-info__title">Travel Time</h3>
+              <p class="travel-info__text">23 Hours <br>5 Minutes</p>
+            </li>
+            <li class="travel-info__item">
+              <h3 class="travel-info__title">Pricing</h3>
+              <p class="travel-info__text">$1,976 USD</p>
+            </li>
+          </ul>
 
+          <a href="#" class="btn-common btn-travel">Book <span>Flight</span></a>
+          
         </div>
       </div>
     </div>
