added a new section

--- a/app/index.html
+++ b/app/index.html
@@ -562,13 +562,14 @@
               <p class="travel-info__text">$1,976 USD</p>
             </li>
           </ul>
-
           <a href="#" class="btn-common btn-travel">Book <span>Flight</span></a>
-          
         </div>
       </div>
     </div>
+  </section>
 
+  <section class="sleep">
+    
   </section>
 
   
