work for a sleep section

--- a/app/index.html
+++ b/app/index.html
@@ -569,7 +569,46 @@
   </section>
 
   <section class="sleep">
-    
+    <div class="container">
+      <h2 class="title title--line travel__title">sleep<span class="title-shadow travel__title-shadow">sleep</span></h2>
+
+      <div class="sleep__slider">
+
+        <ul class="sleep__slider-item">
+
+          <div class="sleep-head">
+            <div class="sleep-head__resort"></div>
+            <p class="suptitle suptitle--left">Resorts</p>
+            <h3 class="title title--small">Auberge <span>|</span> Australia</h3>
+          </div>
+
+          <div class="sleep-raiting">
+            <p class="suptitle suptitle--right">raiting</p>
+            <h3 class="title title--small">Excellent</h3>
+          </div>
+
+          <ul class="sleep-info">
+            <li class="sleep-info__item">
+              <h3 class="sleep-info__title">Resort</h3>
+              <p class="sleep-info__text">Auberge Australia</p>
+            </li>
+            <li class="sleep-info__item">
+              <h3 class="sleep-info__title"># of Nights</h3>
+              <p class="sleep-info__text">5 Nights</p>
+            </li>
+            <li class="sleep-info__item">
+              <h3 class="sleep-info__title"># of Guests</h3>
+              <p class="sleep-info__text">4 Guests</p>
+            </li>
+            <li class="sleep-info__item">
+              <h3 class="sleep-info__title">Pricing</h3>
+              <p class="sleep-info__text">$349 USD</p>
+            </li>
+          </ul>
+          <a href="#" class="btn-common btn-sleep">Book <span>stay</span></a>
+        </div>
+      </div>
+    </div>
   </section>
 
   
