--- a/app/index.html
+++ b/app/index.html
@@ -584,7 +584,7 @@
 
           <div class="sleep-raiting">
             <p class="suptitle suptitle--right">raiting</p>
-            <h3 class="title title--small">Excellent</h3>
+            <h3 class="title title--small sleep-raiting__stars">Excellent <img src="img/sleep/5stars.png" alt="raiting"</h3>
           </div>
 
           <ul class="sleep-info">
