changed bg on sleep section

--- a/app/index.html
+++ b/app/index.html
@@ -577,7 +577,7 @@
         <ul class="sleep__slider-item">
 
           <div class="sleep-head">
-            <div class="sleep-head__resort"></div>
+            <img src="img/sleep/resort1.png" alt="resort" class="sleep-head__resort"></img>
             <p class="suptitle suptitle--left">Resorts</p>
             <h3 class="title title--small">Auberge <span>|</span> Australia</h3>
           </div>
